# saturating-arithmetic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: saturating.rs
tests/: test_saturating_arithmetic.rs
