[package]
name = "saturating_arithmetic"
version = "0.1.2"
authors = ["Bent Hillerkus <benthillerkus@gmail.com>", "Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
repository = "https://github.com/ogierm/saturating-arithmetic"
keywords = ["crypto", "arithmetic"]
license = "Apache-2.0"
readme = "README.md"
description = "Proc macro #[saturateit] to rewrite operators into their saturating equivalents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/saturating.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "extra-traits"]}
quote = "1.0"
